# vanetza

./: .gitignore  .travis.yml  404.html  CMakeLists.txt  CNAME  Doxyfile  README.md  conanfile.py  index.html  mkdocs.yml  search.html  sitemap.xml
api/: index.html
gtest/: .gitignore  CMakeLists.txt  GTestFramework.cmake  download_gtest.sh
net/: CMakeLists.txt  ethernet_header.cpp  ethernet_header.hpp  io_vector.cpp  linux_packet_socket.cpp  linux_packet_socket.hpp  mac_address.cpp  mac_address.hpp  packet.hpp  socket_descriptor.cpp  socket_descriptor.hpp
sumo2nmea/: CMakeLists.txt  length.h  projector.cc  projector.h  sumo2nmea.cc  wgs84point.h
tools/benchmark/: CMakeLists.txt  README.md  case.hpp  index.html  main.cpp  options.cpp  options.hpp
tools/certify/: CMakeLists.txt  README.md  command.hpp  index.html  main.cpp  options.cpp  options.hpp  utils.cpp  utils.hpp
tools/fuzz-harness/: CMakeLists.txt  Dockerfile  RouterIndicate.h  compile.sh  docker-entrypoint.sh  docker.sh  fuzz.sh  index.html  persistent.cpp  router_fuzzing_context.cpp  router_fuzzing_context.hpp  router_indicate_fuzz.cpp  router_indicate_test.cpp  run.cpp
tools/pki/: CMakeLists.txt  README.md  asn1.cpp  asn1.hpp  at_request.cpp  at_request.hpp  at_response.cpp  at_response.hpp  authorization.cpp  authorization.hpp  certificate.cpp  certificate.hpp  certificate_filesystem_storage.cpp  certificate_filesystem_storage.hpp  certificate_revocation_list.cpp  certificate_revocation_list.hpp  certificate_storage.hpp  certificate_trust_list.cpp  certificate_trust_list.hpp  config.cpp  cpoc.cpp  cpoc.hpp  credential_filesystem_storage.cpp  credential_filesystem_storage.hpp  credential_storage.hpp  crl_store.cpp  crl_store.hpp  dc_command.cpp  dc_command.hpp  distribution_centre.cpp  distribution_centre.hpp  ea_request.cpp  ea_request.hpp  ea_response.cpp  ea_response.hpp  ecies.cpp  ecies.hpp  encrypted_data.cpp  encrypted_data.hpp  enrolment.cpp  (+53 more)
tools/socktap/: CGpsData.cpp  CGpsData.hpp  CMakeLists.txt  FirstEthernetInterface.cpp  FirstEthernetInterface.hpp  GPS_FakeData.txt  NetworkInterface.cpp  NetworkInterface.hpp  README.md  application.cpp  application.hpp  autotalks.cpp  autotalks.hpp  autotalks_link.cpp  autotalks_link.hpp  autotalks_net.cpp  autotalks_net.hpp  bench_in_application.cpp  bench_in_application.hpp  benchmark_application.cpp  benchmark_application.hpp  cam_application.cpp  cam_application.hpp  cohda.cpp  cohda.hpp  cohda_link.cpp  cohda_link.hpp  dcc_passthrough.cpp  dcc_passthrough.hpp  decode_application.cpp  ethernet_device.cpp  ethernet_device.hpp  fake_network_device.cpp  fake_network_device.hpp  gps_position_provider.cpp  gps_position_provider.hpp  hello_application.cpp  hello_application.hpp  index.html  its_application.cpp  (+35 more)
tools/uppertester/: CMakeLists.txt  README.md  application.cpp  application.hpp  ethernet_device.hpp  main.cpp  passthrough.cpp  passthrough.hpp  run.sh  serialization.hpp  socket.cpp  socket.hpp  time_trigger.cpp  time_trigger.hpp  ttcn3.config  uppertester.cpp  uppertester.hpp
vanetza/asn1/: .gitignore  CMakeLists.txt  Dockerfile  Ieeedot2dot1Protocol.patch  Makefile  apply_patches.cmake  asn1c_conversion.hpp  asn1c_its2_sources.txt  asn1c_its_r2_sources.txt  asn1c_its_sources.txt  asn1c_pki_sources.txt  asn1c_security_r2_sources.txt  asn1c_security_sources.txt  asn1c_support_sources.txt  asn1c_wrapper.cpp  asn1c_wrapper.hpp  cam.hpp  cam_en302637-2v1.3.0.asn1  cam_en302637-2v1.3.2.asn1  cdd_ts102894-2v1.2.1.asn1  clean_asn1c.cmake  collect_asn1c_sources.cmake  copy_asn1c_skeleton.cmake  cpm.hpp  cpm.hpp.in  denm.asn1  denm.hpp  denm_en302637-3v1.2.0.asn1  denm_en302637-3v1.2.2.asn1  etsi_certificate.hpp  etsi_secured_data.hpp  fetch_ieee_asn1_files.cmake  fetch_iso_asn1_files.cmake  fetch_iso_r2_asn1_files.cmake  ieee1609dot2_certificate.hpp  ivim.hpp  mapem.hpp  memory.c  memory.h  packet_visitor.hpp  (+13 more)
vanetza/cohda/: CMakeLists.txt  cohda_raw_socket.cpp  cohda_raw_socket.hpp  mk2_descriptor.cpp  mk2_descriptor.hpp
vanetza/common/: CMakeLists.txt  annotation.hpp  archives.cpp  archives.hpp  bit_number.hpp  byte_buffer.hpp  byte_buffer_convertible.cpp  byte_buffer_convertible.hpp  byte_buffer_source.cpp  byte_order.hpp  byte_sequence.cpp  byte_sequence.hpp  byte_view.cpp  byte_view.hpp  channel.hpp  clock.cpp  clock.hpp  confident_quantity.hpp  errno_exception.hpp  factory.hpp  hook.hpp  its_aid.hpp  manual_runtime.cpp  manual_runtime.hpp  object_container.hpp  position_confidence.hpp  position_fix.cpp  position_fix.hpp  position_provider.hpp  runtime.cpp  runtime.hpp  serialization.hpp  serialization_buffer.hpp  stored_position_provider.hpp  timestamp.cpp  timestamp.hpp  unit_interval.cpp  unit_interval.hpp
vanetza/dcc/: CMakeLists.txt  access_control.cpp  access_control.hpp  burst_budget.cpp  burst_budget.hpp  bursty_transmit_rate_control.cpp  bursty_transmit_rate_control.hpp  channel_load.cpp  channel_load.hpp  channel_load_smoothing.cpp  channel_load_smoothing.hpp  channel_probe_processor.hpp  data_request.hpp  duty_cycle_permit.hpp  entity.hpp  flow_control.cpp  flow_control.hpp  fully_meshed_state_machine.cpp  fully_meshed_state_machine.hpp  gradual_state_machine.cpp  gradual_state_machine.hpp  hooked_channel_probe_processor.cpp  hooked_channel_probe_processor.hpp  interface.hpp  limeric.cpp  limeric.hpp  limeric_budget.cpp  limeric_budget.hpp  limeric_transmit_rate_control.cpp  limeric_transmit_rate_control.hpp  mapping.cpp  mapping.hpp  regular_budget.cpp  regular_budget.hpp  scheduler.cpp  scheduler.hpp  single_reactive_transmit_rate_control.cpp  single_reactive_transmit_rate_control.hpp  smoothing_channel_probe_processor.cpp  smoothing_channel_probe_processor.hpp  (+7 more)
vanetza/facilities/: .gitignore  CMakeLists.txt  cam_functions.cpp  cam_functions.hpp  cam_functions.hpp.in
vanetza/geodesy/: CMakeLists.txt  country_data_reader.cpp  country_data_reader.hpp  country_database.cpp  country_database.hpp  country_polygon.hpp  geodesy.cpp  geodesy.hpp  geographiclib.cpp  geographiclib.hpp  haversine.cpp  haversine.hpp  m49_code.hpp  position.hpp
(+11677 files in other folders)
